--- a/Loginç/Properties/Settings.settings
+++ b/Loginç/Properties/Settings.settings
@@ -5,18 +5,18 @@
     <Setting Name="Proyecto_DesarrolloConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=DESKTOP-21KAN6J\SQLEXPRESS;Initial Catalog=Proyecto_Desarrollo;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=DESKTOP-UVN87AS\SQLEXPRESS;Initial Catalog=Proyecto_Desarrollo;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=DESKTOP-21KAN6J\SQLEXPRESS;Initial Catalog=Proyecto_Desarrollo;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=DESKTOP-UVN87AS\SQLEXPRESS;Initial Catalog=Proyecto_Desarrollo;Integrated Security=True</Value>
     </Setting>
     <Setting Name="A_Beltran_CopiadoraConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=DESKTOP-21KAN6J\SQLEXPRESS;Initial Catalog=A.Beltran.Copiadora;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=DESKTOP-UVN87AS\SQLEXPRESS;Initial Catalog=A.Beltran.Copiadora;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=DESKTOP-21KAN6J\SQLEXPRESS;Initial Catalog=A.Beltran.Copiadora;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=DESKTOP-UVN87AS\SQLEXPRESS;Initial Catalog=A.Beltran.Copiadora;Integrated Security=True</Value>
     </Setting>
     <Setting Name="S" Type="System.String" Scope="User">
       <Value Profile="(Default)">
