--- a/Loginç/Loginç.csproj
+++ b/Loginç/Loginç.csproj
@@ -77,11 +77,11 @@
     <Compile Include="IngresoModificacionProducto.Designer.cs">
       <DependentUpon>IngresoModificacionProducto.cs</DependentUpon>
     </Compile>
-    <Compile Include="LogIn.cs">
+    <Compile Include="IniciarSesion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LogIn.Designer.cs">
-      <DependentUpon>LogIn.cs</DependentUpon>
+    <Compile Include="IniciarSesion.Designer.cs">
+      <DependentUpon>IniciarSesion.cs</DependentUpon>
     </Compile>
     <Compile Include="Gerente.cs">
       <SubType>Form</SubType>
@@ -121,12 +121,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Servicio_Tecnico.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Servicio_Tecnico.Designer.cs">
-      <DependentUpon>Servicio_Tecnico.cs</DependentUpon>
-    </Compile>
     <Compile Include="Validar.cs" />
     <Compile Include="_A_Beltran_CopiadoraDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -233,8 +227,8 @@
     <EmbeddedResource Include="IngresoModificacionProducto.resx">
       <DependentUpon>IngresoModificacionProducto.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LogIn.resx">
-      <DependentUpon>LogIn.cs</DependentUpon>
+    <EmbeddedResource Include="IniciarSesion.resx">
+      <DependentUpon>IniciarSesion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Gerente.resx">
       <DependentUpon>Gerente.cs</DependentUpon>
@@ -264,9 +258,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Servicio_Tecnico.resx">
-      <DependentUpon>Servicio_Tecnico.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
